syntax = "proto3";

option csharp_namespace = "AElf.Types.CSharp.Tests";

message TestParams
{
    bool field1 = 1;
    sint32 field2 = 2;
    uint32 field3 = 3;
    sint64 field4 = 4;
    uint64 field5 = 5;
    string field6 = 6;
    bytes field7 = 7;
 }

message BoolValue {
    bool value = 1;
}

message IntValue {
    int32 value = 1;
}

message UIntValue {
    uint32 value = 1;
}

message LongValue {
    int64 value = 1;
}

message ULongValue {
    uint64 value = 1;
}

message StringValue {
    string value = 1;
}

message BytesValue {
    bytes value = 1;
}

message ComplexValue {
    IntValue IntData = 1;
    StringValue StringData = 2;
}
