syntax = "proto3";

package profit;

import "common.proto";
import "kernel.proto";
import "aelf_options.proto";
import "google/protobuf/empty.proto";
import "profit.proto";

option csharp_namespace = "AElf.Contracts.Profit";

service ProfitContract {
    option (aelf.csharp_state) = "AElf.Contracts.Profit.ProfitContractState";

    // Actions
    rpc InitializeProfitContract (InitializeProfitContractInput) returns (google.protobuf.Empty) {
    }
    rpc CreateProfitItem (CreateProfitItemInput) returns (Hash) {
    }
    rpc AddReceiver (AddReceiverInput) returns (google.protobuf.Empty) {
    }
    rpc RemoveReceiver (RemoveReceiverInput) returns (google.protobuf.Empty) {
    }
    rpc Profit (ProfitInput) returns (google.protobuf.Empty) {
    }
    
}